syntax = "proto3";

package blog_grpc;

option go_package = ".;blog_grpc";

message Blog {
  int32 blog_id = 1;
  int32 author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog=1;
}

message CreateBlogResponse {
  Blog blog=1;
}

message ReadBlogRequest {
  Blog blog_id=1;
}

message ReadBlogResponse {
  Blog blog=1;
}

message UpdateBlogRequest {
  Blog blog=1;
}

message UpdateBlogResponse {
  Blog blog=1;
}

message DeleteBlogRequest {
  Blog blog_id=1;
}

message DeleteBlogResponse {
  Blog blog=1;
}

message ListBlogRequest {
}

message ListBlogResponse {
  Blog blog=1;
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
  // rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse);
  // rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse);
  // rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse);
  rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse);
}

